--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,9 +105,9 @@ h6 {
 }
 
 .header .logo img {
-  height: 47px;
+  height: 76px;
   /* margin-right: 8px; */
-  width: 62.22px;
+  width: 80px;
 }
 
 .header .logo h1 {
@@ -119,7 +119,8 @@ h6 {
 
 @media (max-width: 480px) {
   .header .logo img {
-    max-height: 24px;
+    max-width: 60px;
+    max-height: 60px;
   }
 
   .header .logo h1 {
@@ -1097,15 +1098,27 @@ section,
   height: 597px;
 }
 
+@media (max-width: 768px) {
+  .containerr {
+    height: 900px;
+  }
+}
+
 .hero-section {
   display: flex;
   position: relative;
-  top: 150px;
+  top: 110px;
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * S 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
+}
+
+@media (max-width: 768px) {
+  .hero-section {
+    top: 80px;
+  }
 }
 
 .hero .container {
@@ -1342,6 +1355,12 @@ section,
 
 .about .about-images img {
   border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .about .about-images img {
+    margin-top: 80px;
+  }
 }
 
 /*--------------------------------------------------------------
